# MedjedBuilder

./: .gitignore  Cargo.toml  LICENSE  README.md  SPECIFICATION.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  build.rs  build_exe.bat
.github/workflows/: build-windows.yml
fixtures/web/: index.html
src/: aab.rs  axml.rs  bundle_proto.rs  config.rs  jarsign.rs  lib.rs  main.rs  package.rs  signing.rs  theme.rs  validate.rs
template/android/: settings.gradle.kts
template/android/app/: build.gradle.kts
template/android/app/src/main/: AndroidManifest.xml
template/android/app/src/main/assets/: app.json
template/android/app/src/main/assets/www/: index.html
template/android/app/src/main/java/io/html2apk/shell/: MainActivity.kt
template/android/app/src/main/res/values/: styles.xml
