[package]
name = "html2apk"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "MedjedBuilder: Offline HTML folder to Android APK builder"
build = "build.rs"

# 配布名は MedjedBuilder。ライブラリcrate名(html2apk)は内部識別子のため維持する。
[[bin]]
name = "medjedbuilder"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1"
apksig = "0.4"
base64 = "0.22"
dirs = "6"
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
prost = "0.13"
rand = "0.8"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring", "pem"] }
rfd = "0.15"
rsa = { version = "0.9", features = ["pem", "sha2"] }
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
